# LCTaskTemplate

./: README.md
cache/: Government_Work_Report_2025_docstore.json  Test_ParentVectorDBManager_docstore.json  text-embedding-ada-002019fa97d-b507-5d03-a08b-49a9c7bf4728  text-embedding-ada-00204f63c50-e2da-51d7-b6da-0d3593d24de1  text-embedding-ada-00207bcbf8c-9d1e-53f6-9cff-7cccf710a37a  text-embedding-ada-0020c58ba66-8c33-531f-a8d9-f8f01188fe62  text-embedding-ada-0021135455d-8a24-5f1a-a7df-63ef2366f0f3  text-embedding-ada-002140912bb-0749-5337-863f-ad5ac6ba2232  text-embedding-ada-00218436496-b95b-52f0-b1f7-aafb632c3067  text-embedding-ada-0021878c001-64ef-5ee0-9f0a-c437fb95b9e7  text-embedding-ada-0021a21f1a9-cb95-58b5-8ca3-4c805a0b7961  text-embedding-ada-0021f0678ec-c9ae-5df3-9ed4-c0933c10251b  text-embedding-ada-0021fdc3012-7d66-5e85-9a6d-12c2c08d391b  text-embedding-ada-002247a2d88-d60e-54e0-937e-deef98f3b65c  text-embedding-ada-002269a070b-7425-5620-937b-8bd62b1f0b95  text-embedding-ada-00227efe78d-ece5-5f1f-842d-e9b1beb3fe55  text-embedding-ada-0022916ace5-60c4-5055-b21f-d2aea2681c76  text-embedding-ada-00230f4d598-e748-5b4d-b963-b4e9a33ea7e6  text-embedding-ada-002316a5efb-7bdc-5f0a-99d2-a3911c91f5c1  text-embedding-ada-00234092f64-a6db-5d7b-ac73-625b82a2e8e7  text-embedding-ada-0023e3a2791-79c5-5c0a-a112-86745e77ac78  text-embedding-ada-0023ea229f4-7224-5f9a-8907-8c730698e87b  text-embedding-ada-002406be3b5-3f9c-5d44-a75e-172f4c9e9079  (+61 more)
case/: ChatAgent.py  ChatLLM.py
myApp/: README.md  main.py  pyproject.toml
myApp/app/: client.py  server.py
(+409 files in other folders)
